--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <h1>Unknown page</h1>
 <p>If this page was opened by a program this means it is no longer avalible.</p>
+<meta name="apple-mobile-web-app-capable" content="yes">
