--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
-<h1>Unknown page</h1>
-<p>If this page was opened by a program this means it is no longer avalible.</p>
-<meta name="apple-mobile-web-app-capable" content="yes">
+<html>
+  <head>
+    <meta name="apple-mobile-web-app-capable" content="yes">
+  </head>
+<body>
+<h1>This is Raymond's simple website</h1>
+<p>This is some content.</p>
+</body>
+</html>
