--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="apple-touch-icon" href="https://i.vimeocdn.com/portrait/9615240_640x640">
   </head>
 <body>
 <h1>This is Raymond's simple website</h1>
