--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
 <body>
 <h1>This is Raymond's simple website</h1>
-<p>This is some content.</p>
+<p>Currently I don't have much content</p>
+<p> I need some css</p>
 </body>
 </html>
