--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="apple-touch-icon" href="https://i.vimeocdn.com/portrait/9615240_640x640">
+    <link rel="stylesheet" type="text/css" href="theme.css">
   </head>
 <body>
 <h1>This is Raymond's simple website</h1>
