--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
 <body>
 <h1>This is Raymond's simple website</h1>
-<p>Currently I don't have much content</p>
+<p>Currently I don't have much content<a href="https://google.com/"> so you can go back to google</a></p>
 <p> I need some css</p>
 </body>
 </html>
